namespace CabinetInfirmier;

public class Adresse
{
    int? etage;
    int? numero;
    string rue;
    int codePostal;
    string? ville;
}